-
Bug
-
Resolution: Done
-
P2: Important
-
6.x
-
6d8e7567d7 (qt/qtwayland/dev) 6d8e7567d7 (qt/tqtc-qtwayland/dev), baf61e667 (tqtc/lts-6.2), 61618b4e1 (tqtc/lts-5.15)
All the EGL-based client buffer integrations call eglBindWaylandDisplayWL, and by default fail to initialize if it returns false. However, "eglBindWaylandDisplayWL returns EGL_FALSE when there is already a wl_display bound to EGLDisplay otherwise EGL_TRUE". This means that only the first integration will work. One workaround is to set the environment variable QT_WAYLAND_IGNORE_BIND_DISPLAY